<!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Unslash Image Fetcher</string>
    <string name="add_photo">Add Photo</string>

    <string name="photo1_name">Rose</string>
    <string name="photo2_name">Freesia</string>
    <string name="photo3_name">Lily</string>
    <string name="photo4_name">Sunphoto</string>
    <string name="photo5_name">Peony</string>
    <string name="photo6_name">Daisy</string>
    <string name="photo7_name">Lilac</string>
    <string name="photo8_name">Marigold</string>
    <string name="photo9_name">Poppy</string>
    <string name="photo10_name">Daffodil</string>
    <string name="photo11_name">Dahlia</string>
    <string name="photo12_name">Tulip</string>

    <string name="photo1_description">Rose comes from the Latin word Rosa. There are over 100
        species of the rose. </string>
    <string name="photo2_description">Freesias bloom during spring and are native to
        Africa.</string>
    <string name="photo3_description">Lilies have the longest in vase lifespan of any cut
        bloom.</string>
    <string name="photo4_description">Mature Sunphotos face east and are native too the United
        States.</string>
    <string name="photo5_description">Peony plants can live to be 100 years old.</string>
    <string name="photo6_description">Daisies are cousins with Sunphotos.</string>
    <string name="photo7_description">Lilacs belong to the olive family.</string>
    <string name="photo8_description">Marigolds come in orange, reed, maroon and yellow.</string>
    <string name="photo9_description">Poppies can be over 3 feet tall.</string>
    <string name="photo10_description">Daffodils are referred to as Lent Lilies in England</string>
    <string name="photo11_description">Dahlia is named after the Swedish botanist Anders
        Dahl</string>
    <string name="photo12_description">There are over 150 species of tulips.</string>

    <string name="photo_string">Photo</string>
    <string name="photo_finder">Photo finder</string>
    <string name="photo_description_edit_text">Photo Description</string>
    <string name="name_edit_text">Photo Name</string>
    <string name="done_button_text">Done</string>
    <string name="fab_content_description">fab</string>
    <string name="photo_image_content_description">Image of the photo</string>
    <string name="remove_this_photo">Remove this photo</string>
    <string name="like_this_photo">Like this photo</string>
    <string name="unlike_this_photo">Unlike this photo</string>
    <string name="photo_name_edit_text">photo name</string>
</resources>