<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".likedPhotosListComponents.LikedPhotosFragment">

    <TextView
        android:id="@+id/flower_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/photo1_name"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/flower_detail_image"
        android:layout_width="323dp"
        android:layout_height="303dp"
        android:layout_gravity="center"
        android:contentDescription="@string/photo_image_content_description"
        app:srcCompat="@drawable/rose"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/flower_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/photo1_description"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="418dp" />

    <Button
        android:id="@+id/remove_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/remove_this_photo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="654dp" />

    <Button
        android:id="@+id/like_button"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#E62768"
        android:text="@string/like_this_photo"
        app:icon="@android:drawable/ic_menu_compass"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="575dp" />

</LinearLayout>